<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmento_add_marcador">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:gravity="center"
        android:layout_gravity="top"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_form"
        android:textSize="24sp"
        android:textStyle="bold"
        android:justificationMode="inter_word"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:padding="30dp">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/nombre_producto"
            android:inputType="text"/>
        <EditText
            android:id="@+id/txtModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="16dp"
            android:hint="@string/modelo_producto"
            android:inputType="text"/>
        <Spinner
            android:id="@+id/spnMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="16dp"
            android:tooltipText="@string/marca_producto"
            android:autofillHints="@string/marca_producto"
            android:spinnerMode="dropdown"/>
        <EditText
            android:id="@+id/txtColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="16dp"
            android:hint="@string/color_producto"
            android:inputType="text"/>
        <EditText
            android:id="@+id/txtLongitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="16dp"
            android:hint="@string/longitud_producto"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_guardar"
            android:textAllCaps="false"
            android:backgroundTint="#E92B23"
            android:gravity="center"
            android:layout_gravity="center"/>



    </LinearLayout>


</FrameLayout>